namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: user-2
  labels:
    name: user-2
