service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-service
spec:
  type: ExternalName
  externalName: kubernetes-eks-demo.coagjfe4w6es.us-east-1.rds.amazonaws.com
